// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonToggle Classic theme renders correctly with default settings 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.c2 {
  display: inline-block;
  height: 38px;
  padding: 0 24px;
  font-weight: 600;
  border: 1px solid #668491;
  font-size: 14px;
  background-color: #FFFFFF;
  height: auto;
  min-width: auto;
  padding: 15px 25px;
  font-weight: 900;
  border: 1px solid #ccd6db;
}

input:checked ~ .c2 {
  color: #FFFFFF;
  background-color: #003F2E;
}

input:focus ~ .c2 {
  outline: 3px solid #FFB500;
}

.c2:hover {
  background-color: #E5F4E5;
  border-color: #003F2E;
}

input:checked ~ .c2 {
  color: #FFFFFF;
  background-color: #1573e6;
}

input:focus ~ .c2 {
  outline: 0;
}

.c2:hover {
  border-color: #1e499f;
  color: #FFFFFF;
  background-color: #1e499f;
}

.c0 {
  display: inline-block;
  vertical-align: middle;
}

.c0:not(:first-of-type) {
  margin-left: 10px;
}

.c1 {
  position: absolute;
  width: 0;
  height: 0;
  opacity: 0;
}

<div
  className="c0"
>
  <input
    className="c1"
    id="guid-12345"
    type="radio"
  />
  <label
    className="c2"
    htmlFor="guid-12345"
    size="large"
  >
    <div
      className="c3"
    >
      Button
    </div>
  </label>
</div>
`;

exports[`ButtonToggle General styling renders correctly when grouped 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.c3 {
  display: inline-block;
  height: 38px;
  padding: 0 24px;
  font-weight: 600;
  border: 1px solid #668491;
  font-size: 14px;
  background-color: #FFFFFF;
  height: auto;
  min-width: auto;
  padding: 15px 25px;
  font-weight: 900;
  border: 1px solid #ccd6db;
}

input:checked ~ .c3 {
  color: #FFFFFF;
  background-color: #003F2E;
}

input:focus ~ .c3 {
  outline: 3px solid #FFB500;
}

.c3:hover {
  background-color: #E5F4E5;
  border-color: #003F2E;
}

input:checked ~ .c3 {
  color: #FFFFFF;
  background-color: #1573e6;
}

input:focus ~ .c3 {
  outline: 0;
}

.c3:hover {
  border-color: #1e499f;
  color: #FFFFFF;
  background-color: #1e499f;
}

.c6 .c4 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 .c4 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: inline-block;
  vertical-align: middle;
}

.c0:not(:first-of-type) {
  margin-left: 10px;
}

.c0:not(:first-of-type) {
  margin-left: 0;
}

.c0:not(:first-of-type) .c2 {
  border-left-width: 0;
}

.c1 {
  position: absolute;
  width: 0;
  height: 0;
  opacity: 0;
}

<div>
  <div
    className="c0"
  >
    <input
      className="c1"
      id="guid-12345"
      type="radio"
    />
    <label
      className="c2 c3"
      htmlFor="guid-12345"
      size="large"
    >
      <div
        className="c4 c5"
      >
        Text
      </div>
    </label>
  </div>
  <div
    className="c0"
  >
    <input
      className="c1"
      id="guid-12345"
      type="radio"
    />
    <label
      className="c2 c3"
      htmlFor="guid-12345"
      size="large"
    >
      <div
        className="c4 c5"
      >
        Text
      </div>
    </label>
  </div>
</div>
`;

exports[`ButtonToggle Modern themes renders correctly with small theme 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.c5 .c3 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: inline-block;
  height: 38px;
  padding: 0 24px;
  font-weight: 600;
  border: 1px solid #668491;
  font-size: 14px;
  background-color: #FFFFFF;
}

input:checked ~ .c2 {
  color: #FFFFFF;
  background-color: #003F2E;
}

input:focus ~ .c2 {
  outline: 3px solid #FFB500;
}

.c2:hover {
  background-color: #E5F5F1;
  border-color: #003F2E;
}

.c0 {
  display: inline-block;
  vertical-align: middle;
}

.c0:not(:first-of-type) {
  margin-left: 10px;
}

.c1 {
  position: absolute;
  width: 0;
  height: 0;
  opacity: 0;
}

<div
  className="c0"
>
  <input
    className="c1"
    id="guid-12345"
    type="radio"
  />
  <label
    className="c2"
    htmlFor="guid-12345"
    size="large"
  >
    <div
      className="c3 c4"
    >
      Button
    </div>
  </label>
</div>
`;
